2008-01-15  Matthias Clasen  <mclasne@redhat.com>

	* gdk-pixbuf-io.c (save_to_stream): Handle partial writes.

2008-01-16  Michael Natterer  <mitch@imendio.com>

	* gdk-pixbuf-io.c (save_to_stream): fix signature of this function
	and propagate errors from g_output_stream_write(). Return error
	also on incomplete writes (which don't generate an error by
	themselves).

	Unrelated:

	(gdk_pixbuf_io_init): initialize "builtin_module" on a separate
	line to avoid compiler warning in the common case of no built-in
	modules.

2008-01-16  Michael Natterer  <mitch@imendio.com>

	* Makefile.am (LDADDS): use $GDK_PIXBUF_DEP_LIBS instead of
	$GLIB_LIBS so gio gets pulled in.

2008-01-15  Matthias Clasen  <mclasne@redhat.com>

	* gdk-pixbuf.symbols:
	* gdk-pixbuf-core.h:
	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_stream):
	(gdk_pixbuf_new_from_stream_at_scale):
	(gdk_pixbuf_save_to_stream): New stream i/o functions.

2008-01-14  Michael Natterer  <mitch@imendio.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_prepare): cast the return
	value of _gdk_pixbuf_scaled_anim_new() to fix incompatible pointer
	warning.

2007-12-09  Matthias Clasen  <mclasen@redhat.com>

	* io-jpeg.c: Fix the spinguard logic for big buffers.
	(#494667, Ed Catmur)
	
2007-11-25  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Fix static build of the icns loader.

2007-11-25  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* io-jasper.c: Add the libjasper JPEG2000 loader
	(Closes: #469901)

2007-11-20  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-animation.c: Use G_DEFINE_TYPE (#469341, 
	Björn Lindqvist)

2007-11-20  Bastien Nocera  <hadess@hadess.net>

	* io-icns.c: (load_resources): Add support for 512x512 Leopard
	icons, using the ic09 iconType

2007-11-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* io-icns.c: Add icns (MacOS X icons) loader, based on work by
	Lyonel Vincent <lyonel@ezix.org> (Closes: #395738)

2007-11-10  Matthias Clasen <mclasen@redhat.com>
